# snugdb

./: CMakeLists.txt  LICENSE.TXT  README.md
include/: catch.hpp
snugdb-cli/: main.cpp
snugdb-http/: main.cpp
snugdb-main/: collection.cpp  collection.h  document.cpp  document.h  file_utils.cpp  file_utils.h  key_value_database.cpp  key_value_database.h  surface.cpp  surface.h  task.h  task_queue.cpp  task_queue.h
snugdb-server/: main.cpp
snugdb-tests/: test_all.cpp  test_collection.cpp  test_key_value_database.cpp  test_surface.cpp  tests.cpp
